--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         core_testing_version = '2.1.0'
         junit_version = '4.13.2'
         mockito_version = "4.0.0"
+        mockk_version = '1.12.3'
     }
 
     repositories {
