add user local data source with your unit test

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,4 +5,9 @@ targetCompatibility = "8"
 
 dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
+
+    // COROUTINES
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version")
+
 }
