add retrofit annotations

--- a/features/user_feature/build.gradle
+++ b/features/user_feature/build.gradle
@@ -13,6 +13,12 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version")
 
+    // GSON
+    implementation("com.google.code.gson:gson:$gson_version")
+
+    // RETROFIT
+    implementation("com.squareup.retrofit2:retrofit:$retrofit_version")
+    implementation("com.squareup.retrofit2:converter-gson:$retrofit_version")
 
     // JUNIT
     testImplementation("junit:junit:$junit_version")
