--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         constraintlayout_version = '2.1.3'
         core_ktx_version = '1.7.0'
         kotlin_version = '1.6.10'
+        lifecycle_version = '2.5.0-beta01'
         material_version = '1.5.0'
 
         coroutines_version = "1.6.1"
