--- a/features/user_feature/build.gradle
+++ b/features/user_feature/build.gradle
@@ -1,13 +1,56 @@
-apply plugin: 'kotlin'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+}
 
-sourceCompatibility = "8"
-targetCompatibility = "8"
+android {
+    compileSdk 32
+
+    defaultConfig {
+        minSdk 21
+        targetSdk 32
+
+        vectorDrawables.useSupportLibrary = true
+    }
+
+    dataBinding {
+        enabled true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+}
 
 dependencies {
     implementation project(":core")
 
+    // APP COMPAT
+    implementation("androidx.appcompat:appcompat:$appcompat_version")
+
+    // CONSTRAINT
+    implementation("androidx.constraintlayout:constraintlayout:$constraintlayout_version")
+
+    // CORE
+    implementation("androidx.core:core-ktx:$core_ktx_version")
+
     // KOTLIN
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
+
+    // LIFECYCLE
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
+
+    // MATERIAL
+    implementation("com.google.android.material:material:$material_version")
 
     // COROUTINES
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
