--- a/features/user_feature/build.gradle
+++ b/features/user_feature/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     // MATERIAL
     implementation("com.google.android.material:material:$material_version")
 
+    // CIRCLE IMAGEVIEW
+    implementation("de.hdodenhof:circleimageview:$circleimageview_version")
+
     // COROUTINES
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version")
@@ -66,6 +69,9 @@ dependencies {
     // RETROFIT
     implementation("com.squareup.retrofit2:retrofit:$retrofit_version")
     implementation("com.squareup.retrofit2:converter-gson:$retrofit_version")
+
+    // PICASSO
+    implementation("com.squareup.picasso:picasso:$picasso_version")
 
     // ROOM
     implementation("androidx.room:room-ktx:$room_version")
