--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,25 @@ buildscript {
 
         coroutines_version = "1.6.1"
         gson_version = "2.9.0"
-        koin_version = "3.1.6"
+        koin_version = "3.2.0"
         retrofit_version = "2.9.0"
         room_version = "2.4.2"
+        okhttp_logging_version = '3.13.1'
         picasso_version = '2.71828'
         circleimageview_version = '3.0.0'
+        shimmer_version = '0.5.0'
 
         core_testing_version = '2.1.0'
         junit_version = '4.13.2'
         mockito_version = "4.0.0"
         mockk_version = '1.12.3'
+
+        test_core_version = '1.4.0'
+        test_runner_version = '1.4.0'
+        test_rules_version = '1.4.0'
+        test_junit_version = '1.1.3'
+        espresso_core_version = '3.4.0'
+        espresso_intents_version = '3.4.0'
     }
 
     repositories {
